--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "firebase": "^11.0.2",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
