--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "libphonenumber-js": "^1.11.16",
     "lucide-react": "^0.460.0",
