--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "overrides": {
+    "reactflow": {
+      "react": "^19.0.0-rc-66855b96-20241106",
+      "react-dom": "^19.0.0-rc-66855b96-20241106"
+    }
+  },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-switch": "^1.1.3",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "libphonenumber-js": "^1.11.16",
@@ -17,9 +24,11 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "reactflow": "^11.8.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/react": "19.0.9",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
