--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     }
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.4",
     "@headlessui/react": "^2.2.0",
     "@radix-ui/react-switch": "^1.1.3",
     "date-fns": "^4.1.0",
